WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54030
Crash calling -setFrame:andScrollBy: in windowDidResize
https://bugs.webkit.org/show_bug.cgi?id=54030
Summary
Crash calling -setFrame:andScrollBy: in windowDidResize
Anders Carlsson
Reported
2011-02-08 13:41:51 PST
Crash calling -setFrame:andScrollBy: in windowDidResize
Attachments
Patch
(2.23 KB, patch)
2011-02-08 13:44 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-08 13:44:45 PST
Created
attachment 81686
[details]
Patch
Anders Carlsson
Comment 2
2011-02-08 13:51:43 PST
Committed
r77968
: <
http://trac.webkit.org/changeset/77968
>
WebKit Review Bot
Comment 3
2011-02-08 14:44:10 PST
http://trac.webkit.org/changeset/77968
might have broken GTK Linux 64-bit Debug The following tests are not passing: fast/frames/set-unloaded-frame-location.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug