2011-02-08  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Crash calling -setFrame:andScrollBy: in windowDidResize
        https://bugs.webkit.org/show_bug.cgi?id=54030
        <rdar://problem/8969760>

        * Platform/mac/SharedMemoryMac.cpp:
        (WebKit::SharedMemory::create):
        Assert that size is not zero here; we never want to try to create shared memory with a zero size.

        * WebProcess/WebPage/DrawingAreaImpl.cpp:
        (WebKit::DrawingAreaImpl::setSize):
        Always invalidate the entire visible page when resizing.


Canonical link: https://commits.webkit.org/68027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77968 268f45cc-cd09-0410-ab3c-d52691b4dbfc